--- a/templates/programme.html
+++ b/templates/programme.html
@@ -1,28 +1,54 @@
 {% extends "base.html"%}
 {% block title %} programme {% endblock %}
 {%block content %}
+<style>
+        /* Example 2: Background image with specific position and size */
+        .custom-position-size {
+            background-image: url('../static/assets/img/programmePic.jpg');
+             /* Set a specific size for the background image */
+             background-size: cover;
+            background-position: 0vh 80vh; /* Set a specific position (20px from left, 50px from top) */
+            height: 20vh;
+        }
+        .col img {
+          margin: 0%;
+          padding: 0%;
+        }
+</style>
+
 <div class="container-fluid">
-
-
-<div class="row">
-  <div class="col">
-    <h1>Programmes</h1>
+  <div class="row">
+    <div class="custom-position-size " >
+      <div class="m-5 text-light"><h1>Programmes</h1></div>
+    </div>
   </div>
 </div>
 
-<div class="row">
-  <div class="col">
-    <img src="../static/assets/img/programme1.png">
+<div class="container my-5">
+  <div class="row">
+    <div class="col">
+      <div class="justify-content-center"><h1>Programmes</h1></div>
+    </div>
   </div>
-  <div class="col">
-    <img src="../static/assets/img/programme2.png">
-  </div>
-</div>
 
-<div class="row">
-  <div class="col">
-
+  <div class="row">
+    <div class="col">
+      <img src="../static/assets/img/programme1.jpg" class="img-fluid">
+    </div>
+    <div class="col">
+      <img src="../static/assets/img/programme2.jpg" class="img-fluid">
+    </div>
   </div>
-</div>
+
+  <div class="row">
+    <div class="">
+      <ul class="nav justify-content-center">
+        <li class="nav-item"><a class="nav-link" href="#">Doctor of Philosophy</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Master Degree</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Bachelor</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Diploma</a></li>
+      </ul>
+    </div>
+  </div>
 </div>
 {% endblock %}
