--- a/templates/collaborationPartners.html
+++ b/templates/collaborationPartners.html
@@ -4,67 +4,13 @@ Testimonials
 {% endblock %}
 
 {%block content %}
-<style>
-.card-hover:hover .card-container {
-  transform: translateY(-10px); /* Adjust the value to control how much it moves up */
-  transition: transform 0.35s ease; /* Add a smooth transition */
-}
-
-.list-group-item a {
-  color: black;
-}
-
-.list-group-item i {
-  color: #eba200;
-}
-</style>
-
 <main>
   <div style="background-image: url('../static/assets/img/Testimonial-bg.jpg'); background-position: top 80%; background-size: cover; width: 100%; height: 150px;">
-    <h1 class="position-absolute ml-2" style="margin-top: 50px; color:white; margin-left: 120px;">Testimonials</h1>
+    <h1 class="position-absolute ml-2" style="margin-top: 50px; color:white; margin-left: 120px;">Collaboration Partners</h1>
   </div>
-  <div id="">
-    <div class="container d-flex flex-column">
-      <div class="row justify-content-center m-4">
-        <div class="col-9 text-center">
-          <h2 class="m-2">FOCS Alumni</h2>
-          <div class="row row-cols-1 row-cols-md-3 g-4 m-4 justify-content-center">
-            <div class="">
-              <div class="card h-100">
-                <a href="#" class="card-link">
-                  <img src="../static/assets/img/why-us.png" class="card-img-top" alt="">
-                </a>
-                <div class="card-body">
-                  <h4 class="card-title fs-6">Card title</h4>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-              </div>
-            </div>
-            <div class="">
-              <div class="card h-100">
-                <a href="#" class="card-link">
-                  <img src="../static/assets/img/why-us.png" class="card-img-top" alt="">
-                </a>
-                <div class="card-body">
-                  <h4 class="card-title fs-6">Card title</h4>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-3">
-          <h4 class="m-2 fs-6">More</h4>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item"><a href="#"><i class="bi bi-chevron-right"></i>An item</a></li>
-            <li class="list-group-item"><a href="#"><i class="bi bi-chevron-right"></i>A second item</a></li>
-            <li class="list-group-item"><a href="#"><i class="bi bi-chevron-right"></i>A third item</a></li>
-            <li class="list-group-item"><a href="#"><i class="bi bi-chevron-right"></i>A fourth item</a></li>
-            <li class="list-group-item"><a href="#"><i class="bi bi-chevron-right"></i>And a fifth one</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
+  <div class="container d-flex flex-column m-auto m-5 p-5">
+      <h2 class="text-center ">Academia-Industry Collaboration</h2>
+      <img src="../static/assets/img/Collaboration Partners-bg.png" class="m-4" alt="">
   </div>
 </main>
 {%endblock %}
