--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Roboto:100,300,400,500,700|Philosopher:400,400i,700,700i"
       rel="stylesheet"
     />
-
+    
     <!-- Vendor CSS Files -->
     <link
       href="{{ url_for('static', filename='assets/vendor/aos/aos.css')}}"
@@ -186,7 +186,7 @@
               </ul>
             </li>
             <li>
-              <a class="link-effect nav-link scrollto nav-cus" href="#pricing"
+              <a class="link-effect nav-link scrollto nav-cus" href="{{ url_for('staffDirectory')}}"
                 >Our Team</a
               >
             </li>
