--- a/templates/index.html
+++ b/templates/index.html
@@ -11,77 +11,115 @@
   overflow: hidden;
 }
 
-.card-hover:hover .card-container {
-  transform: translateY(-10px); /* Adjust the value to control how much it moves up */
-  transition: transform 0.35s ease; /* Add a smooth transition */
+.card-hover {
+  transition: 0.3s;
+}
+
+.card-hover:hover {
+  transform: scale(1.1);
+  transition: 0.3s;
+}
+
+.card-body img {
+  max-width: 100%; /* Ensure the image doesn't overflow the card */
+  max-height: 100%; /* Ensure the image doesn't overflow the card */
+}
+
+.card a {
+  color: black;
 }
 
 </style>
 
-<main id="hero">
+<main>
+  <div class="container-fluid">
+    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../static/assets/img/carousel-bg1.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="../static/assets/img/carousel-bg2.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="../static/assets/img/carousel-bg3.png" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>  
 
-  <div class="hero-container container d-flex flex-column">
-    <div class="row justify-content-center mx-1">
-      <div class="col-2 p-2">
-        <a href="{{ url_for('whyChooseUs')}}" class="card-link">
-          <div class="card m-1 py-2 d-flex align-content-between card-hover" style="min-height: 200px;">
-            <div class="my-auto card-container">
-              <img src="../static/assets/img/why-us.png" class="m-0 w-50 mx-auto" alt="Why Choose Us">
-              <p class="card-text">Why Choose Us</p>
+    <div>
+      <div class="container d-flex flex-column w-75">
+        <div class="row row-cols-1 row-cols-md-6 g-4 justify-content-center m-4 mb-5">
+          <div class="card-hover">
+            <div class="card h-100 py-4">
+              <a href="{{ url_for('whyChooseUs')}}" class="card-link">
+                <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                  <img src="../static/assets/img/why-us.png" alt="Why Choose Us" style="min-width: 82px; max-width: 82px;">
+                  <p class="card-title text-center">Why Choose Us</p>
+                </div>
+              </a>
             </div>
           </div>
-        </a>
-      </div>
-      <div class="col-2 p-2">
-        <a href="/programme" class="card-link">
-          <div class="card m-1 py-2 d-flex align-content-between card-hover" style="min-height: 200px;">
-            <div class="my-auto card-container">
-              <img src="../static/assets/img/programmes.png" class="m-0 w-50 mx-auto" alt="Programmes">
-              <p class="card-text">Programmes</p>
+          <div class="card-hover">
+            <div class="card h-100 py-4">
+              <a href="/programme" class="card-link">
+                <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                  <img src="../static/assets/img/programmes.png" alt="Programmes" style="min-width: 82px; max-width: 82px;">
+                  <p class="card-title text-center">Programmes</p>
+                </div>
+              </a>
             </div>
           </div>
-        </a>
-      </div>
-      <div class="col-2 p-2">
-        <a href="{{ url_for('staffDirectory')}}" class="card-link">
-          <div class="card m-1 py-2 d-flex align-content-between card-hover" style="min-height: 200px;">
-            <div class="my-auto card-container">
-              <img src="../static/assets/img/Collaboration Partners.png" class="m-0 w-50 mx-auto"
-                alt="Collaboration Partners">
-              <p class="card-text text-wrap">Collaboration Partners</p>
+          <div class="card-hover">
+            <div class="card h-100 py-4">
+              <a href="{{ url_for('collaborationPartners')}}" class="card-link">
+                <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                  <img src="../static/assets/img/Collaboration Partners.png" alt="Collaboration Partners" style="min-width: 82px; max-width: 82px;">
+                  <p class="card-title text-center">Collaboration Partners</p>
+                </div>
+              </a>
             </div>
           </div>
-        </a>
-      </div>
-      <div class="col-2 p-2">
-        <a href="#" class="card-link">
-          <div class="card m-1 py-2 d-flex align-content-between card-hover" style="min-height: 200px;">
-            <div class="my-auto card-container">
-              <img src="../static/assets/img/Highlights.png" class="m-0 w-50 mx-auto" alt="Highlights">
-              <p class="card-text">Highlights</p>
+          <div class="card-hover">
+            <div class="card h-100 py-4">
+              <a href="#" class="card-link">
+                <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                  <img src="../static/assets/img/Highlights.png" alt="Highlights" style="min-width: 82px; max-width: 82px;">
+                  <p class="card-title text-center">Highlights</p>
+                </div>
+              </a>
             </div>
           </div>
-        </a>
-      </div>
-      <div class="col-2 p-2">
-        <a href="#" class="card-link">
-          <div class="card m-1 py-2 d-flex align-content-between card-hover" style="min-height: 200px;">
-            <div class="my-auto card-container">
-              <img src="../static/assets/img/Recognition.png" class="m-0 w-50 mx-auto" alt="Recognition">
-              <p class="card-text">Recognition</p>
+          <div class="card-hover">
+            <div class="card h-100 py-4">
+              <a href="#" class="card-link">
+                <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                  <img src="../static/assets/img/Recognition.png" alt="Recognition" style="min-width: 82px; max-width: 82px;">
+                  <p class="card-title text-center">Recognition</p>
+                </div>
+              </a>
             </div>
           </div>
-        </a>
-      </div>
-      <div class="col-2 p-2">
-        <a href="{{ url_for('testimonials')}}" class="card-link">
-          <div class="card m-1 py-2 d-flex align-content-between card-hover" style="min-height: 200px;">
-            <div class="my-auto card-container">
-              <img src="../static/assets/img/Testimonials.png" class="m-0 w-50 mx-auto" alt="Testimonials">
-              <p class="card-text">Testimonials</p>
+          <div class="card-hover">
+            <div class="card h-100 py-4">
+              <a href="{{ url_for('testimonials')}}" class="card-link">
+                <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                  <img src="../static/assets/img/Testimonials.png" alt="Testimonials" style="min-width: 82px; max-width: 82px;">
+                  <p class="card-title text-center">Testimonials</p>
+                </div>
+              </a>
             </div>
           </div>
-        </a>
+        </div>
       </div>
     </div>
   </div>
