--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
 </style>
 
 <main>
-  <div class="container-fluid">
+  <div class="container-fluid p-0">
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
