--- a/templates/facilities.html
+++ b/templates/facilities.html
@@ -1,19 +1,8 @@
 {% extends "base.html"%} {% block title %} Facilities {% endblock %} {%block
 content %}
 
-<div
-  class="container-fluid text-center text-white d-flex align-items-center"
-  style="
-    background-image: url(../static/assets/img/header-image.jpg);
-    background-position: center 80%;
-    background-size: cover;
-    height: auto;
-    width: 100%;
-  "
->
-  <div class="container-fluid justify-content-center">
-    <h1>Facilities</h1>
-  </div>
+<div style="background-image: url('../static/assets/img/Testimonial-bg.jpg'); background-position: top 80%; background-size: cover; width: 100%; height: 150px;">
+  <h1 class="position-absolute ml-2" style="margin-top: 50px; color:white; margin-left: 120px;">Facilities</h1>
 </div>
 
 <section class="mt-5 mb-5 container-fluid">
