--- a/templates/staffDirectory.html
+++ b/templates/staffDirectory.html
@@ -7,17 +7,8 @@
   }
 </style>
 
-<div
-  class="container-fluid text-center text-white d-flex justify-content-center align-items-center" 
-  style="
-    background-image: url(../static/assets/img/header-image.jpg);
-    background-position: center 80%;
-    background-size: cover;
-    height: 112.39px;
-    width: 100%;
-  "
->
-    <h1>Staff Directory</h1>
+<div style="background-image: url('../static/assets/img/Testimonial-bg.jpg'); background-position: top 80%; background-size: cover; width: 100%; height: 150px;">
+  <h1 class="position-absolute ml-2" style="margin-top: 50px; color:white; margin-left: 120px;">Staff Directory</h1>
 </div>
 
 <section
