--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -316,6 +316,7 @@ span {
   .navbar .dropdown .dropdown:hover>ul {
     left: -100%;
   }
+  
 }
 
 .link-effect {
@@ -376,7 +377,7 @@ span {
   }
 
   .navbar ul {
-    display: none !important;
+    display: none;
   }
   
   #header{
@@ -385,6 +386,23 @@ span {
 
   .void-overlap{
     margin-top: 80px !important;
+  }
+
+  .nav-fa-circle {
+    font-size: 28px !important;
+    color: #d28900 !important;
+    margin-top: 12px !important;
+    margin-right: 0px !important;
+  }
+  
+  .nav-fa {
+    font-size: 14px !important;
+    margin-top: 12px !important;
+    margin-right: 0px !important;
+  }
+
+  .fa-hide{
+    display: none !important;
   }
 
 }
@@ -396,6 +414,7 @@ span {
   right: 0;
   left: 0;
   bottom: 0;
+  height: 100%;
   background: rgba(34, 34, 34, 0.9);
   transition: 0.3s;
   z-index: 999;
@@ -421,17 +440,20 @@ span {
   transition: 0.3s;
 }
 
+
+
 .navbar-mobile a,
 .navbar-mobile a:focus {
   padding: 10px 20px;
   font-size: 15px;
   color: #222;
+  text-align: center;
 }
 
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
-  color: #71c55d;
+  color: #EBA200;
 }
 
 .navbar-mobile .getstarted,
