--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,15 @@
     .void-overlap {
       margin-top: 128px;
     }
+
+    @media (max-width: 991px) {
+
+      .nav-cus {
+        background-color: white;
+        margin-bottom: 15px;
+      }
+
+    }
   </style>
 
   <!-- =======================================================
@@ -65,10 +74,10 @@
       </div>
 
       <nav id="navbar" class="navbar">
-        <ul class="d-flex justify-content-between g-2">
+        <ul>
           <li>
-            <a class="link-effect nav-link scrollto active nav-cus" href="{{ url_for('index')}}">
-              <span class="fa-stack d-block me-3">
+            <a class="link-effect nav-link scrollto nav-cus" href="{{ url_for('index')}}">
+              <span class="fa-stack d-block me-3 fa-hide">
                 <i class="fa fa-circle fa-stack-2x nav-fa-circle"></i>
                 <i class="fa fa-home fa-stack-1x nav-fa" style="font-size: 14px;  margin-top: 12px;"></i>
               </span>
@@ -77,31 +86,32 @@
           </li>
           <li>
             <a class="link-effect nav-link scrollto nav-cus" href="{{ url_for('aboutUs')}}">
-              <span class="fa-stack d-block me-3"> 
-                <i class="fa fa-circle fa-stack-2x nav-fa-circle"></i> 
+              <span class="fa-stack d-block me-3 fa-hide">
+                <i class="fa fa-circle fa-stack-2x nav-fa-circle"></i>
                 <i class="fa fa-briefcase fa-stack-1x nav-fa"></i> </span>
-                <span class="mr-3"> About Us </span>
+              <span class="mr-3"> About Us </span>
             </a>
           </li>
           <li>
             <a class="link-effect nav-link scrollto nav-cus" href="{{ url_for('facilities')}}">
-              <span class="fa-stack d-block me-3"> 
-                <i class="fa fa-circle fa-stack-2x nav-fa-circle"></i> 
+              <span class="fa-stack d-block me-3 fa-hide">
+                <i class="fa fa-circle fa-stack-2x nav-fa-circle"></i>
                 <i class="fa fa-laptop fa-stack-1x nav-fa"></i> </span>
-                <span class="mr-3"> Facilities </span>
+              <span class="mr-3"> Facilities </span>
             </a>
           </li>
           <li class="dropdown">
             <a class="link-effect nav-cus" href="#">
-              <span class="fa-stack d-block me-3"> 
-                <i class="fa fa-circle fa-stack-2x nav-fa-circle"></i> 
+              <span class="fa-stack d-block me-3 fa-hide">
+                <i class="fa fa-circle fa-stack-2x nav-fa-circle"></i>
                 <i class="fa fa-book fa-stack-1x nav-fa"></i> </span>
-                <span class="mr-3"> Research </span> 
+              <span class="mr-3"> Research </span>
               <i class="bi bi-chevron-down"></i>
             </a>
             <ul>
               <li>
-                <a href="{{ url_for('cictis')}}" class="text-wrap">Centre for ICT Innovations and Creativity (CICTIC)</a>
+                <a href="{{ url_for('cictis')}}" class="text-wrap">Centre for ICT Innovations and Creativity
+                  (CICTIC)</a>
               </li>
               <li>
                 <a href="#" class="text-wrap">Centre for Data Science and Analytics (CDSA)</a>
@@ -123,10 +133,10 @@
           </li>
           <li class="link-effect dropdown">
             <a class="link-effect nav-cus" href="#">
-              <span class="fa-stack d-block me-3"> 
-                <i class="fa fa-circle fa-stack-2x nav-fa-circle"></i> 
+              <span class="fa-stack d-block me-3 fa-hide">
+                <i class="fa fa-circle fa-stack-2x nav-fa-circle"></i>
                 <i class="fa fa-university fa-stack-1x nav-fa"></i> </span>
-                <span class="mr-3"> External Advisors </span>
+              <span class="mr-3"> External Advisors </span>
               <i class="bi bi-chevron-down"></i>
             </a>
             <ul>
@@ -144,12 +154,11 @@
             </ul>
           </li>
           <li>
-            <a class="link-effect nav-link scrollto nav-cus"
-              href="{{ url_for('staffDirectoryRoute', page_num = 1)}}">
-              <span class="fa-stack d-block me-3"> 
-                <i class="fa fa-circle fa-stack-2x nav-fa-circle"></i> 
+            <a class="link-effect nav-link scrollto nav-cus" href="{{ url_for('staffDirectoryRoute', page_num = 1)}}">
+              <span class="fa-stack d-block me-3 fa-hide">
+                <i class="fa fa-circle fa-stack-2x nav-fa-circle"></i>
                 <i class="fa fa-users fa-stack-1x nav-fa"></i> </span>
-                <span class="mr-3"> Our Team </span>
+              <span class="mr-3"> Our Team </span>
             </a>
           </li>
         </ul>
@@ -216,7 +225,32 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="{{ url_for('static', filename='assets/js/main.js')}}"></script>
+  <script>
+    // Function to handle actions based on screen size
+    function handleScreenSize() {
+      const screenWidth = window.innerWidth;
+  
+      // Check if the screen width is beyond 991 pixels
+      if (screenWidth > 991) {
+        // Toggle off the 'navbar-mobile' class (assuming it hides the mobile navigation)
+        const navbar = document.querySelector('.navbar');
+        navbar.classList.remove('navbar-mobile');
+  
+        // Reset the mobile-nav-toggle to the 'bi-list' state
+        const mobileNavToggle = document.querySelector('.mobile-nav-toggle');
+        mobileNavToggle.classList.remove('bi-x');
+        mobileNavToggle.classList.add('bi-list');
+      }
+    }
+  
+    // Initial call to handleScreenSize on page load
+    handleScreenSize();
+  
+    // Listen for the window resize event
+    window.addEventListener("resize", handleScreenSize);
+  </script>
+  
 </body>
 
 </html>
