--- a/templates/index.html
+++ b/templates/index.html
@@ -114,7 +114,7 @@
           </div>
           <div class="card-hover">
             <div class="card h-100 py-4">
-              <a href="{{ url_for('testimonials')}}" class="card-link">
+              <a href="{{ url_for('ccncs')}}" class="card-link">
                 <div class="card-body d-flex flex-column justify-content-center align-items-center">
                   <img src="../static/assets/img/Testimonials.png" alt="Testimonials" style="min-width: 82px; max-width: 82px;">
                   <p class="card-title text-center">Testimonials</p>
